--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -1,12 +1,17 @@
 *{
     font-family:Helvetica, arial, sans-serif;
-    margin: 0px;
+    margin: 0;
     padding: 0;
     text-decoration: none;
     box-sizing: border-box;
 }
 
-header {     
+header {   
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh; 
+    
     width: 100%;  
     background-color: black;         
     text-align: center;
@@ -15,6 +20,7 @@ header {
 
     a{
          color: white;
+
     }
 }
 
