--- a/styles/_rdsGallery.scss
+++ b/styles/_rdsGallery.scss
@@ -1,5 +1,9 @@
 /* RDS_galeria */
 
+.insta-feik{
+    position: relative;
+}
+
 .rds-perfil{
     display: grid;  
     grid-template-columns: .5fr 1fr;  
