--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -1,41 +1,22 @@
 
-body{
-    scroll-snap-type: y mandatory;
-}
-
-header {   
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    height: 10vh;     
-    width: 100%;  
-    background-color: black;         
-           
-    a{
-         color: white;
-    }
-}
 
 .main-menu{
     height: 90vh;
 }
 
-.main-menu__list {    
-    scroll-snap-align: start;
-    width: 100vw;    
-    margin: auto;
-    box-sizing: border-box;
-        a{            
+.main-menu__list {                   
+    margin: auto;   
+    list-style: none;
+        a{    
+        width: 100vw;  
+        height: 15vh;      
         display: flex;
-        // justify-content: center;
-        // align-items: center;        
-        height: 15vh;
-        font-size: 2rem;    
-        list-style: none;
-        border:  1px solid black;         
-        color: black;        
-            
-                 
+        justify-content: center;
+        align-items: center;        
+        font-size: 2rem;            
+        border:  .5px solid black;
+         box-sizing: border-box;         
+        color: black;                              
         }    
 }
 
