--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,7 @@
 @import "./rndmMOMO";
 @import "./rdsGallery";
 @import "./residuos";
+@import "./videos";
 
 @import "./animaciones";
 @import "./mediaQueries";
