agregué entrada de blog ficunam

--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -11,9 +11,10 @@
         width: 100vw;  
         height: 15vh;      
         display: flex;
+        text-align: center;
         justify-content: center;
         align-items: center;        
-        font-size: 2rem;            
+        font-size: 1.5rem;            
         border:  .5px solid black;
         box-sizing: border-box;         
         color: black;                   
