--- a/styles/_videos.scss
+++ b/styles/_videos.scss
@@ -1,7 +1,7 @@
 .video-cont {
-    height: 90vh;
-    width:100vw
-    
+    height: 100vh;
+    width:100vw;
+    overflow: hidden;    
 }
 
 .videoWrapper {
