--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,12 +1,12 @@
 
-
+@import "./general";
 @import "./home";
-
 @import "./rndmMOMO";
+
 @import "./rdsGallery";
 @import "./residuos";
 @import "./videos";
+@import "./blog";
 
 @import "./animaciones";
 @import "./mediaQueries";
-@import "./general";
