--- a/styles/_mediaQueries.scss
+++ b/styles/_mediaQueries.scss
@@ -1,10 +1,13 @@
 
-@media only screen and (min-width: 514px) {
-    #imgWrap{
-        width: 60%;       
-    }
+// @media only screen and (min-width: 514px) {
+   
+   
+   
+//     #imgWrap{
+//         width: 60%;       
+//     }
 
-    #divImage{
-        width: 50vw;
-    }  
-}
+//     #divImage{
+//         width: 50vw;
+//     }  
+// }
