cambie los futers de rds

--- a/styles/_blog.scss
+++ b/styles/_blog.scss
@@ -8,12 +8,11 @@
 .tcont{
     position: relative;
     width: 80%;
-    margin: auto;
+    margin: auto;    
     margin-top: 2rem;
     background-color: white;
     overflow: hidden;
-    animation: scroll .5s .2s backwards ; 
-    
+    animation: scroll .5s .2s backwards ;     
 }
 
 .cover__t1 {   
@@ -21,8 +20,7 @@
     text-align: left;
     padding: 1.2rem;   
     padding-bottom: .1rem; 
-    margin: 0; 
-      
+    margin: 0;       
 }
 
 .cover__t2 {      
@@ -33,8 +31,6 @@
     width: 100%;   
     animation: scroll .5s .4s backwards;    
 }
-
-
 
 @keyframes scroll {
     0%{left:100vw;}
@@ -62,43 +58,48 @@
 }
 
 .cover__bg img {    
-    width: 500% ;
+    height: 100vh;
     position: relative;
-    left: -200%;
+    
 }
 
 // _________ARTICLE_______________________
 
 .article {
     background-color: white;
+    position: relative;
+
+    .article__fecha {
+        font-size: 1rem;
+        padding-left: 1rem;
+        padding-top: 1rem;
+    }
+
+    .article__paragraph {
+        width: 90vw;    
+        margin: auto;
+        margin-top: 1.5rem ;
+        margin-bottom: 1.5rem ;
+        font-size: 1.5rem;
+    
+        a { 
+            color: green;
+        }
+    }
+
     img {
-        width: 100vw;
-        margin-bottom: 1.5rem;
+        width: 100vw;     
     }
 
-    video{
-        width: 100vw;
-        margin-bottom: 1.5rem;
-    }
+    .img-pie__txt{    
+        font-size: .7rem;
+        font-style: italic;    
+        margin: .2rem;  
+        margin-right: .5rem;      
+        text-align: right;
+    }  
 }
 
-.article__fecha {
-    font-size: 1rem;
-    padding: 1rem;
-}
 
-.article__paragraph {
-    width: 90vw;
-    margin: auto;
-    margin-bottom: 1.8rem;
-    font-size: 1.5rem;
 
-    a { 
-        color: green;
-    }
-
-    video{
-        width: 100vw;
-    }
-}
 
