--- a/styles/_residuos.scss
+++ b/styles/_residuos.scss
@@ -44,13 +44,17 @@
     margin-top: 2em;
     margin-bottom: 2em;
     text-align: right;  
-    width:100%;     
+    width:100%;   
+     
 }
 
 #autor a{        
     font-style: bold;
-    font-size: .9em;    
-    color: black;   
+    font-size: 1rem;    
+    color: white; 
+    border: solid black 1px;
+    background-color: black;  
+    padding: .5rem; 
 }
 
 #RDimgXtra img{
@@ -66,10 +70,20 @@
 
 .RDpar{
     margin-top: 0;
-    font-size: 2em;
+    font-size: 1.5rem;
     font-style: bold;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;    
+}
+
+.ft-rds{    
+    width: 20vw;
+    margin: auto;
+    margin-bottom: 2rem;
+    a{
+        font-size: 4rem;
+        color: black;         
+    }
 }
 
 
