--- a/styles/main.css
+++ b/styles/main.css
@@ -94,32 +94,7 @@ header a {
 .rndm {
   width: 100vw;
   position: absolute;
-  margin: auto;
   z-index: 1;
-}
-
-.rndm-bg {
-  position: absolute;
-  height: 100vh;
-  width: 100vw;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.rndm-bg_tierra1 {
-  width: 100%;
-  z-index: -2;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.rndm-bg_tierra2 {
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
-  width: 20%;
-  margin: auto;
-  z-index: -1;
 }
 
 .rndm__img {
@@ -138,10 +113,43 @@ header a {
 
 #divImage {
   width: 90vw;
-  margin: auto;
-  -webkit-animation: divImage .5s;
-          animation: divImage .5s;
   border-radius: 5%;
+  -webkit-animation: slideIn .5s;
+          animation: slideIn .5s;
+}
+
+@-webkit-keyframes slideIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+  0% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+  0% {
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
 
 .rndm__desc {
@@ -167,6 +175,22 @@ header a {
   margin-top: 5%;
   border-radius: 5%;
   border: none;
+}
+
+.rndm-bg {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.rndm-bg_tierra1 {
+  width: 100%;
+  z-index: -2;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 /* RDS_galeria */
@@ -299,8 +323,11 @@ a .regresar {
 
 #autor a {
   font-style: bold;
-  font-size: .9em;
-  color: black;
+  font-size: 1rem;
+  color: white;
+  border: solid black 1px;
+  background-color: black;
+  padding: .5rem;
 }
 
 #RDimgXtra img {
@@ -316,10 +343,21 @@ a .regresar {
 
 .RDpar {
   margin-top: 0;
-  font-size: 2em;
+  font-size: 1.5rem;
   font-style: bold;
   font-family: 'Times New Roman', Times, serif;
   text-align: center;
+}
+
+.ft-rds {
+  width: 20vw;
+  margin: auto;
+  margin-bottom: 2rem;
+}
+
+.ft-rds a {
+  font-size: 4rem;
+  color: black;
 }
 
 .video-cont {
@@ -418,43 +456,43 @@ a .regresar {
 }
 
 .cover__bg img {
-  width: 500%;
+  height: 100vh;
   position: relative;
-  left: -200%;
 }
 
 .article {
   background-color: white;
+  position: relative;
+}
+
+.article .article__fecha {
+  font-size: 1rem;
+  padding-left: 1rem;
+  padding-top: 1rem;
+}
+
+.article .article__paragraph {
+  width: 90vw;
+  margin: auto;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  font-size: 1.5rem;
+}
+
+.article .article__paragraph a {
+  color: green;
 }
 
 .article img {
   width: 100vw;
-  margin-bottom: 1.5rem;
 }
 
-.article video {
-  width: 100vw;
-  margin-bottom: 1.5rem;
-}
-
-.article__fecha {
-  font-size: 1rem;
-  padding: 1rem;
-}
-
-.article__paragraph {
-  width: 90vw;
-  margin: auto;
-  margin-bottom: 1.8rem;
-  font-size: 1.5rem;
-}
-
-.article__paragraph a {
-  color: green;
-}
-
-.article__paragraph video {
-  width: 100vw;
+.article .img-pie__txt {
+  font-size: .7rem;
+  font-style: italic;
+  margin: .2rem;
+  margin-right: .5rem;
+  text-align: right;
 }
 
 @-webkit-keyframes blur {
@@ -528,40 +566,6 @@ a .regresar {
   to {
     -webkit-filter: hue-rotate(0) saturate(100%);
             filter: hue-rotate(0) saturate(100%);
-  }
-}
-
-@-webkit-keyframes divImage {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-  0% {
-    -webkit-transform: translateY(10px);
-            transform: translateY(10px);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-}
-
-@keyframes divImage {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-  0% {
-    -webkit-transform: translateY(10px);
-            transform: translateY(10px);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
   }
 }
 /*# sourceMappingURL=main.css.map */
