ultimos reoques para sacar la primera versión más o menos decente

--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -41,3 +41,10 @@ header {
     left: 70px;
     transform: rotate(-45deg);   
 }
+
+.mainMenu-BG {
+    height: 80vh;
+    img {
+        height: 100%;
+    }
+}
