--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -1,15 +1,15 @@
 
 
 .main-menu{
+    position: relative;
     height: 90vh;
 }
 
 .main-menu__list {                   
-    margin: auto;   
-    list-style: none;
+    position: relative;
         a{    
         width: 100vw;  
-        height: 15vh;      
+        height: 10vh;      
         display: flex;
         text-align: center;
         justify-content: center;
@@ -25,4 +25,14 @@
 .main-menu__list_blk {
     background-color: black;
 }
+
+.mmBG{
+   height: 60vh;
+   img{
+       height: 100%;
+   }
+    
+}
+
+
 
