--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -11,7 +11,7 @@ header {
     justify-content: center;
     align-items: center;
     height: 10vh;     
-    width: 100%;  
+    width: 100vw;  
     background-color: black;                 
     a{
          color: white;
