agregué tags de google analytics

--- a/styles/_mediaQueries.scss
+++ b/styles/_mediaQueries.scss
@@ -20,7 +20,8 @@
     }
 
    #divImage{
-       height: 40vw;
+       margin-top: 2rem;
+       height: 90%;
        object-fit: contain;
        align-items: center;
        justify-content: center;
