--- a/styles/_residuos.scss
+++ b/styles/_residuos.scss
@@ -156,12 +156,40 @@ a .regresar{
 /* --PARTICIPA__PARTICIPA--PARTICIPA__PARTICIPA--PARTICIPA__PARTICIPA*/
 
 .formCont  {
-    margin-top: 2rem;
+    position: relative;
     margin: auto;
     width: 90%;
+    text-align: center;
+
+    .pasoUno  {
+        height: 90vh;
+        padding-top: 30vh;
+        display: inline-block;
+        button{
+            padding: 1rem;
+            font-size: 1rem;
+        }
+    }
+
+    .formRDS {
+        padding-top: 5vh;
+        height: 100vh;
+        #texto {
+            box-sizing: content-box;
+            height: 15vh;
+            width: 90vw;
+            resize: none;
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+        }
+    }
+
     input, label, #buscar {
-        font-size: 2rem;
-        margin-top: 1rem;
-        margin-bottom: 1rem;
+        text-align: center;
+        font-size: 1.5rem;
+        margin-top: .5rem;
+        margin-bottom: .5rem;
+        width: 90vw;
+        padding: .5rem;        
     }
 }
