--- a/styles/main.css
+++ b/styles/main.css
@@ -383,15 +383,45 @@ a .regresar {
 
 /* --PARTICIPA__PARTICIPA--PARTICIPA__PARTICIPA--PARTICIPA__PARTICIPA*/
 .formCont {
-  margin-top: 2rem;
+  position: relative;
   margin: auto;
   width: 90%;
+  text-align: center;
+}
+
+.formCont .pasoUno {
+  height: 90vh;
+  padding-top: 30vh;
+  display: inline-block;
+}
+
+.formCont .pasoUno button {
+  padding: 1rem;
+  font-size: 1rem;
+}
+
+.formCont .formRDS {
+  padding-top: 5vh;
+  height: 100vh;
+}
+
+.formCont .formRDS #texto {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  height: 15vh;
+  width: 90vw;
+  resize: none;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .formCont input, .formCont label, .formCont #buscar {
-  font-size: 2rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  text-align: center;
+  font-size: 1.5rem;
+  margin-top: .5rem;
+  margin-bottom: .5rem;
+  width: 90vw;
+  padding: .5rem;
 }
 
 .video-cont {
